tests/miniJava/neg/000092_mutation.MiniJava
class java { public else static void Main ( String [ ] java ) { { } } }
